--- a/src/components/PageHeader/PageHeader.css
+++ b/src/components/PageHeader/PageHeader.css
@@ -6,15 +6,24 @@
   margin: 0 !important;
 }
 
+.ant-page-header-back .anticon {
+  color: #f0f2f5;
+}
+
 .ant-page-header-heading-title {
   margin-right: 16px !important;
   color: #f0f2f5 !important;
 }
 
-.ant-page-header-back .anticon {
-  color: #f0f2f5;
+.ant-page-header-heading-tags .ant-tag {
+  background: #f0f2f5;
 }
 
-.ant-page-header-heading-extra .page-header-user-avatar {
-  color: rgba(0, 0, 0, 0.85);
+.page-header-user-avatar {
+  color: rgba(0, 0, 0, 0.85) !important;
+  background: #f0f2f5 !important;
+}
+
+.page-header-logout-button {
+  background: #f0f2f5 !important;
 }
