Implement the signing out

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -2,6 +2,10 @@ body {
   background-color: #f0f2f5;
 }
 
+.ant-layout-header {
+  height: 72px;
+}
+
 .ant-layout-content {
   padding: 24px 50px;
 }
