Add the update button to the SolutionGroup component

--- a/src/components/SolutionGroup/SolutionGroup.css
+++ b/src/components/SolutionGroup/SolutionGroup.css
@@ -1,4 +1,4 @@
-.solution-avatar {
+.solution-group-solution-avatar {
   color: rgba(0, 0, 0, 0.85) !important;
   background: #f0f2f5 !important;
 }
