Fix the titles of the solutions in the SolutionGroup component

--- a/src/components/SolutionGroup/SolutionGroup.css
+++ b/src/components/SolutionGroup/SolutionGroup.css
@@ -1,3 +1,7 @@
+.ant-typography-ellipsis-single-line {
+  max-width: calc(75%);
+}
+
 .solution-group-solution-avatar {
   color: rgba(0, 0, 0, 0.85) !important;
   background: #f0f2f5 !important;
