--- a/src/components/PageHeader/PageHeader.css
+++ b/src/components/PageHeader/PageHeader.css
@@ -20,10 +20,12 @@
 }
 
 .page-header-user-avatar {
+  margin-right: 16px !important;
   color: rgba(0, 0, 0, 0.85) !important;
   background: #f0f2f5 !important;
 }
 
-.page-header-logout-button {
+.page-header-log-out-button {
+  margin-left: 0 !important;
   background: #f0f2f5 !important;
 }
