Add the links to the homepage to the PageHeader component

--- a/src/components/PageHeader/PageHeader.css
+++ b/src/components/PageHeader/PageHeader.css
@@ -12,7 +12,10 @@
 
 .ant-page-header-heading-title {
   margin-right: 16px !important;
-  color: #f0f2f5 !important;
+}
+
+.ant-page-header-heading-title a {
+  color: #f0f2f5;
 }
 
 .ant-page-header-heading-tags .ant-tag {
