Implement the editor of test cases in the task form

--- a/src/components/TaskForm/TaskForm.css
+++ b/src/components/TaskForm/TaskForm.css
@@ -1,3 +1,15 @@
+.task-form .ant-card {
+  margin-bottom: 24px;
+}
+
+.task-form .ant-card .ant-form-item {
+  margin-bottom: 8px;
+}
+
+.task-form .ant-card .ant-form-item:last-child {
+  margin-bottom: 0;
+}
+
 .task-form-cancel-button-container {
   padding-right: 4px;
 }
